--- a/hw1.html
+++ b/hw1.html
@@ -6,14 +6,14 @@
     </head>
     <body>
         <section>
-            <p> My name is: Nick</p>
+            <p> My name is: Nick Kuranda </p>
             <p> My major is: Comp Sci and Quant Econ</p>
             <p> My IP address is: 130.64.35.18 </p>
             <p> I grew up in Quincy, Ma</p>
-            <p> Something no one would expect about me: I play lots of video
-            games </p>
-            <p> My fav place: Split, Croatia </p>
-            <img src="" alt="">
+            <p> Something no one would expect about me: I have two adorable
+            yellow labs at home </p>
+            <p> My favorite place: Split, Croatia </p>
+            <img src="split.jpg">
         </section>
     </body>
 </html>
