--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-hellow world
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+    
+    <head>
+        <meta charset="utf-8">
+        <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+        <head>
+            <meta charset="utf-8">
+            <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+            <link href="style.css" rel="stylesheet">
+        </head>
+        <title> Nick's Moving Service</title>
+    </head>
+    <style> 
+        .text{
+            position: relative;
+            left: 25%;
+            width: 50;
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 150%;
+            color: black;
+        }
+        img {
+            width: 75%;
+        }
+     </style>
+    <div class="header"> 
+            <h1">Nick's Moving Service </h1>
+    </div>
+    
+    <div class="nav">
+            <a href="index.html">Home</a>
+            <a href="Contact.html">Contact</a>
+            <a href="Services.html">Services</a>
+          </div>
+    </head>
+    <body>
+        <section>
+             <h1> Welcome to Nick's Moving Service</h1>
+        </section>
+
+        <h3>About</h3>
+        <p> Nick's Moving Service is a Medford based business aimed at providing a labor service for people who are moving. The company aims at providing help in moving in or moving out of homes or apartments based around Tufts University campus. </p>
+        <p> Our hours of operations are: 7:00 am - 6:00 pm Mon-Sat. </p>
+        <h3>Employees</h3>
+        <p>All employees of Nick's Moving Service are Tufts University students. All of them are bright minded individuals who have been great in past history with no previous complications. They are background-checked as well to make sure of no previous complications. </p>
+
+        <h3>Quality</h3>
+        <p>Nick's Moving Service has a quality assurance policy. If any equipment is broken by one our employees, we will offer full reimbursement for damages. This typically never happens, but in the odd case it does, reimbursement is guaranteed.  </p>
+
+        <h3>Looking for Work?</h3>
+        <p>If you are a Tufts University student looking for work, navigate to the Contact page and leave us a message on our phone!</p>
+
+    </body>
+</html>
+
