--- a/hw1.html
+++ b/hw1.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <title> Assignment 1: Nick Kuranda </title>
     </head>
+    <div class="header"> 
+        <h1">Nick's Moving Service </h1>
+</div>
     <body>
         <section>
             <p> My name is: Nick Kuranda </p>
